[PIMP] Fix layout issues on iOS

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -14,7 +14,9 @@
 }
 
 #header .logo {
+    height: 100%;
     padding: 10px;
+    box-sizing: border-box
 }
 
 #header .menu {
